@@ -115,7 +115,7 @@ public class WebTest {
     private void invoke(String contextRoot, String uri, String expected)
             throws Exception {
 
-        URL url = new URL("http://" + host  + ":" + port + contextRoot + uri);
+        URL url = URI.create("http://" + host  + ":" + port + contextRoot + uri).toURL();
         System.out.println("Connecting to: " + url.toString());
         HttpURLConnection conn = (HttpURLConnection) url.openConnection();
         conn.connect();
