@@ -50,7 +50,7 @@ public class WebTest {
             String url = "http://" + host + ":" + port + "/" + contextRoot + "/index.jsp";
             System.out.println(url);
             HttpURLConnection conn = (HttpURLConnection)
-                    (new URL(url)).openConnection();
+                    URI.create(url).toURL().openConnection();
             conn.connect();
             InputStream is = null;
             BufferedReader input = null;
