@@ -49,7 +49,7 @@ public class WebTest {
         BufferedReader input = null;
         String testName = "wl-jsp-descriptor";
         try {
-            URL url = new URL("http://" + host  + ':' + port + '/' + contextRoot + path);
+            URL url = URI.create("http://" + host  + ':' + port + '/' + contextRoot + path).toURL();
             System.out.println("Connecting to: " + url.toString());
             HttpURLConnection conn = (HttpURLConnection) url.openConnection();
             conn.connect();
