@@ -69,7 +69,7 @@ public class WebTest {
         String url = "http://" + host + ":" + port + contextRoot
                      + "/CreateSession";
         HttpURLConnection conn = (HttpURLConnection)
-            (new URL(url)).openConnection();
+            URI.create(url).toURL().openConnection();
         int code = conn.getResponseCode();
         if (code != 200) {
             throw new Exception("Unexpected return code: " + code);
@@ -79,7 +79,7 @@ public class WebTest {
 
         url = "http://" + host + ":" + port + contextRoot
                      + "/CheckResult";
-        conn = (HttpURLConnection) (new URL(url)).openConnection();
+        conn = (HttpURLConnection) URI.create(url).toURL().openConnection();
         code = conn.getResponseCode();
         if (code != 200) {
             throw new Exception("Unexpected return code: " + code);
